SERVER-23889 Make ClusterPlanCache* commands correctly validate the namespace